<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".profile">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">


            <LinearLayout
                android:layout_width="match_parent"
                android:padding="15dp"
                android:background="#d9d5e3"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/back"
                    app:tint="@color/font"
                    android:id="@+id/back"
                    />

                <com.tripleseven.android.latobold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:text="Manage Profile"
                    android:textColor="@color/font"
                    android:layout_marginLeft="20dp"
                    android:textSize="16sp"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >


                <com.tripleseven.android.latobold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_profile"
                    android:textColor="@color/font"
                    android:textSize="18sp"
                    />



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext2"
                    android:layout_marginTop="20dp"
                    android:hint="@string/name"
                    android:textSize="13sp"
                    android:id="@+id/ntitle"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext2"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:textSize="13sp"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext2"
                    android:layout_marginTop="10dp"
                    android:id="@+id/create_pass"
                    android:hint="@string/mobile_number"
                    android:focusable="false"
                    android:editable="false"
                    android:clickable="false"
                    android:textSize="13sp"
                    />


                <com.tripleseven.android.latobold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_profile"
                    android:background="@drawable/button"
                    android:id="@+id/submit"
                    android:textColor="#fff"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="16sp"
                    />



                <com.tripleseven.android.latobold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/font"
                    android:textSize="18sp"
                    />




                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext2"
                    android:layout_marginTop="20dp"
                    android:hint="@string/new_password"
                    android:textSize="13sp"
                    android:id="@+id/create_pass2"
                    android:inputType="textPassword"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext2"
                    android:layout_marginTop="10dp"
                    android:id="@+id/confirm"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textSize="13sp"
                    />


                <com.tripleseven.android.latobold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_password"
                    android:background="@drawable/button"
                    android:id="@+id/submit2"
                    android:textColor="#fff"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="16sp"
                    />

            </LinearLayout>

        </ScrollView>



    </RelativeLayout>



</RelativeLayout>