<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/background"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"

            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.tripleseven.android.latobold
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:id="@+id/title"
                android:text="@string/review_bets"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/red_grad"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="7dp"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:layout_height="wrap_content">

                    <com.tripleseven.android.latobold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/digit"
                        android:gravity="center"
                        android:textColor="@color/font"
                        />
                    <com.tripleseven.android.latobold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/points"
                        android:gravity="center"
                        android:textColor="@color/font"
                        />
                    <com.tripleseven.android.latobold
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/game_type"
                        android:gravity="center"
                        android:textColor="@color/font"
                        />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    >

                    <com.tripleseven.android.latonormal
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_bids"
                        android:textColor="@color/font"
                        />

                    <com.tripleseven.android.latobold
                        android:id="@+id/total_bid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="3"
                        android:textColor="@color/accent" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    >

                    <com.tripleseven.android.latonormal
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_bid_amount"
                        android:textColor="@color/font"
                        />

                    <com.tripleseven.android.latobold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="30"
                        android:id="@+id/total_amount"
                        android:textColor="@color/accent"
                        />


                </RelativeLayout>

            </LinearLayout>

            <com.tripleseven.android.latonormal
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_bid_once_played_will_not_be_cancelled"
                android:textColor="@color/accent"
                android:textSize="13sp"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                >

                <com.tripleseven.android.latobold
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@drawable/red_border_round"
                    android:layout_marginRight="7dp"
                    android:gravity="center"
                    android:textColor="@color/accent"
                    android:id="@+id/cancel"
                    />

                <com.tripleseven.android.latobold
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:background="@drawable/red_button_round"
                    android:gravity="center"
                    android:layout_marginLeft="7dp"
                    android:id="@+id/submit"
                    android:textColor="@color/white"
                    />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>