<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ManualMarketChart">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/accent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/back"
                        app:tint="@color/black" />
                </androidx.cardview.widget.CardView>


                <com.samratmatka.android.latobold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/game_results"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:layout_height="wrap_content">

            <com.samratmatka.android.latobold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MAIN BAZAR"
                android:id="@+id/remark2"
                android:textColor="@color/font"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.samratmatka.android.latonormal
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/date"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textColor="@color/font"
                    />



                <com.samratmatka.android.latonormal
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/open"
                    android:padding="10dp"
                    android:gravity="right"
                    android:textColor="@color/font"
                    />


                <com.samratmatka.android.latonormal
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/close"
                    android:padding="10dp"
                    android:gravity="left"
                    android:textColor="@color/font"
                    />


                <com.samratmatka.android.latonormal
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="@string/jodi"
                    android:padding="10dp"
                    android:textColor="@color/font"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#23000000"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/recyclerview"
                />

        </LinearLayout>





    </RelativeLayout>


</RelativeLayout>